--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,16 @@ body{
     border: 1px solid #23BE0A;
 
 }
+.overlay{
+    color: black;
+    opacity: 0.4;
+    width: 100%;
+    height: 500px;
+}
+.slide-2{
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../src/assets/banner-2.jpg');
+    background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+}
