added responsive design for mobile, tablet and desktop view

--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+    font-family: "Work Sans", sans-serif;
+}
+
 
 h1,h2,h3,h4,h5,h6{
     font-family: "Playfair Display", serif;
 }
 
-body{
+/* body{
     font-family: "Work Sans", sans-serif;
-}
+} */
 .work-sans{
     font-family: "Work Sans", sans-serif;
 }
 .play-fair{
     font-family: "Playfair Display", serif;
 }
+.Montserrat{
+    font-family: "Montserrat", serif;
+}
 .isActive{
-    border: 1px solid #23BE0A;
+    /* border: 1px solid #23BE0A; */
+    border-bottom: 2px solid #23BE0A;
     color: #23BE0A;
+    border-radius: 4px;
 }
 .menu-item{
     padding: 13px 16px;
     transition: all .3s ease;
-    border-radius: 8px;
+    /* border-radius: 8px; */
 }
 .menu-item:hover{
     color: #23BE0A;
-    border: 1px solid #23BE0A;
+    border-radius: 8px;
+    border-bottom: 2px solid #23BE0A;
 
 }
 .overlay{
